# qtdeclarative

./: REUSE.toml  dependencies.yaml
coin/: module_config.yaml
src/: CMakeLists.txt
src/effects/: CMakeLists.txt  qquickmultieffect.cpp  qquickrectangularshadow.cpp
src/qml/: CMakeLists.txt  Qt6QmlBuildInternals.cmake  Qt6QmlMacros.cmake  configure.cmake
src/qmlcompiler/: CMakeLists.txt  qcoloroutput.cpp  qdeferredpointer_p.h  qqmljsbasicblocks.cpp  qqmljscodegenerator.cpp  qqmljscodegenerator_p.h  qqmljscompilepass_p.h  qqmljscompiler.cpp  qqmljscompiler_p.h  qqmljscompilerstats.cpp  qqmljscompilerstats_p.h  qqmljscompilerstatsreporter.cpp  qqmljsfunctioninitializer.cpp  qqmljsfunctioninitializer_p.h  qqmljsimportvisitor.cpp  qqmljsimportvisitor_p.h  qqmljslinter.cpp  qqmljslinter_p.h  qqmljslintercodegen.cpp  qqmljslintercodegen_p.h  qqmljsliteralbindingcheck.cpp  qqmljslogger.cpp  qqmljslogger_p.h  qqmljsloggingutils.cpp  qqmljsloggingutils.h  qqmljsmetatypes_p.h  qqmljsoptimizations.cpp  qqmljsregistercontent.cpp  qqmljsregistercontent_p.h  qqmljsscope.cpp  qqmljsscope_p.h  qqmljsshadowcheck.cpp  qqmljsstoragegeneralizer.cpp  qqmljsstorageinitializer.cpp  qqmljstranslationfunctionmismatchcheck.cpp  qqmljstranslationfunctionmismatchcheck_p.h  qqmljstypedescriptionreader.cpp  qqmljstypepropagator.cpp  qqmljstypepropagator_p.h  qqmljstyperesolver.cpp  (+5 more)
src/qmldom/: CMakeLists.txt  qqmldom_fwd_p.h  qqmldomastcreator.cpp  (+25 more)
tests/auto/qml/qmlcppcodegen/data/Confused/: CMakeLists.txt
tests/auto/qml/qmlcppcodegen/data/Confused/Test/: qmldir
tools/: CMakeLists.txt
(+467 files in other folders)
